--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -89,3 +89,9 @@
 .icon-item a:hover {
     color: gray;
 }
+
+.lyrics-shadows {
+    -webkit-box-shadow: 7px 3px 14px -1px rgba(0,0,0,0.45);
+    -moz-box-shadow: 7px 3px 14px -1px rgba(0,0,0,0.45);
+    box-shadow: 7px 3px 14px -1px rgba(0,0,0,0.4
+}
