--- a/Views/Shared/_AdminNavItemsPartial.cshtml
+++ b/Views/Shared/_AdminNavItemsPartial.cshtml
@@ -18,6 +18,9 @@
                 <li>
                     <a class="dropdown-item" asp-controller="library" asp-action="alltracks">All tracks</a>
                 </li>
+                <li>
+                    <a class="dropdown-item" asp-controller="library" asp-action="allalbums">All albums</a>
+                </li>
             </ul>
         </li>
     }
