--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @using StockBand.Data
 @using StockBand.Interfaces
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DNTCaptcha.Core
