--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -7,9 +7,10 @@
 }
 
 .pagginationDiv {
+    
     position: fixed;
     bottom: 0;
-    width: 100%;
+    width:100%;
     background-color: #222222;
     z-index:2;
 }
@@ -91,7 +92,7 @@
 }
 
 .lyrics-shadows {
-    -webkit-box-shadow: 7px 3px 14px -1px rgba(0,0,0,0.45);
-    -moz-box-shadow: 7px 3px 14px -1px rgba(0,0,0,0.45);
-    box-shadow: 7px 3px 14px -1px rgba(0,0,0,0.4
+    -webkit-box-shadow: 4px 4px 22px -8px rgba(0,0,0,0.47);
+    -moz-box-shadow: 4px 4px 22px -8px rgba(0,0,0,0.47);
+    box-shadow: 4px 4px 22px -8px rgba(0,0,0,0.47);
 }
