--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -7,6 +7,8 @@
     var controllerName = urlActionContext.RouteData.Values["controller"].ToString().ToLower();
 }
 @model PaginetedList<User>
+@inject IUserService _userService;
+@inject ITrackService _trackService;
 
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-3">
@@ -35,7 +37,7 @@
                     <th scope="col">Theme</th>
                     <th scope="col">Action</th>
                 </tr>
-            </thead>
+            </thead> 
             <tbody>
             @foreach (var user in Model)
             {
@@ -47,6 +49,14 @@
                     <td class="text-warning">@user.Role</td>
                     <td class="text-info">@user.Theme</td>
                     <td><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id" class="btn btn-info btn-sm">Edit</a></td>
+                    @if(_trackService.CanCleanUpMainFolderTracksOfUser(user.Id).GetAwaiter().GetResult())
+                    {
+                         <td>
+                            <form method="post" asp-action="cleanupmainfoldertracksofuser" asp-controller="library" asp-route-userid="@user.Id">
+                                <button type="submit" class="btn-primary btn-sm">Clear folder</button>
+                            </form>
+                        </td>   
+                    }
                 </tr>
             }
             </tbody>
