--- a/Views/Admin/Userspanel.cshtml
+++ b/Views/Admin/Userspanel.cshtml
@@ -36,6 +36,7 @@
                     <th scope="col">User role</th>
                     <th scope="col">Theme</th>
                     <th scope="col">Action</th>
+                    <th scope="col" class="text-end">Checksum tracks</th>
                 </tr>
             </thead> 
             <tbody>
@@ -49,13 +50,17 @@
                     <td class="text-warning">@user.Role</td>
                     <td class="text-info">@user.Theme</td>
                     <td><a asp-controller="admin" asp-action="edituser" asp-route-id="@user.Id" class="btn btn-info btn-sm">Edit</a></td>
-                    @if(_trackService.CanCleanUpMainFolderTracksOfUser(user.Id).GetAwaiter().GetResult())
+                    @if(!_trackService.IsAnyTracksContainsInDbContext(user.Id).GetAwaiter().GetResult())
                     {
-                         <td>
-                            <form method="post" asp-action="cleanupmainfoldertracksofuser" asp-controller="library" asp-route-userid="@user.Id">
-                                <button type="submit" class="btn-primary btn-sm">Clear folder</button>
-                            </form>
-                        </td>   
+                        <td class="text-end">
+                            <i class="bi bi-circle-fill text-danger"></i>
+                        </td>
+                    }
+                    else
+                    {
+                        <td class="text-end">
+                            <i class="bi bi-circle-fill text-success"></i>
+                        </td>  
                     }
                 </tr>
             }
