--- a/Views/Account/UserSettings.cshtml
+++ b/Views/Account/UserSettings.cshtml
@@ -12,15 +12,15 @@
                 <div class="row text-start">
                     <div class="col-12 mt-2">
                         <i class="bi bi-lock"></i>
-                        <a style="text-decoration: none;" asp-controller="account" asp-action="changepassword" class="btn btn-link text-start" role="button">Change password</a>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="changepassword" class="btn btn-link text-start" role="button">@InterfaceContext.Code05</a>
                     </div>
                     <div class="col-12 mt-2">
                         <i class="bi bi-palette"></i>
-                        <a style="text-decoration: none;" asp-controller="account" asp-action="changecolor" class="btn btn-link text-start" role="button">Change color</a>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="changecolor" class="btn btn-link text-start" role="button">@InterfaceContext.Code06</a>
                     </div>
                     <div class="col-12 mt-2">
                         <i class="bi bi-easel2"></i>
-                        <a style="text-decoration: none;" asp-controller="account" asp-action="changetheme" class="btn btn-link text-start" role="button">Change theme</a>
+                        <a style="text-decoration: none;" asp-controller="account" asp-action="changetheme" class="btn btn-link text-start" role="button">@InterfaceContext.Code07</a>
                     </div>
                 </div>
             </div>
